[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/kenvector_future_thin.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/ScoreString.gd" type="Script" id=3]
[ext_resource path="res://UI/buttons/right.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -111.0
margin_right = 240.0
margin_bottom = 111.0
rect_scale = Vector2( 1.10819, 1.13986 )
custom_fonts/font = SubResource( 2 )
text = "crappy
space
game"
align = 1
autowrap = true

[node name="ScoreString" type="Label" parent="."]
margin_left = 138.0
margin_top = 2.0
margin_right = 384.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 4 )
text = "score:"
align = 1
script = ExtResource( 3 )

[node name="Score" type="Label" parent="ScoreString"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 150.0
margin_right = 195.0
margin_bottom = 222.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -102.0
margin_top = -139.0
margin_right = 10.0
margin_bottom = -32.9999
rect_scale = Vector2( 1.71965, 0.872504 )
custom_fonts/font = SubResource( 3 )
icon = ExtResource( 4 )
flat = true
icon_align = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="start_game" from="." to="." method="new_game"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
